# raven2

./: .gitignore  .project  .pydevproject  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  manifest.xml  package.xml  setup_custom_pythonpath.sh
catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  raven_2-msg-extras.cmake.develspace.in  raven_2-msg-extras.cmake.installspace.in
catkin_generated/installspace/: raven_2-msg-paths.cmake  raven_2.pc  raven_2Config.cmake
cfg/: MyStuff.cfg  MyStuff.cfgc
cfg/cpp/raven_2/: MyStuffConfig.h
cmake/: raven_2-genmsg-context.py  raven_2-genmsg.cmake
docs/: MyStuffConfig-usage.dox
include/: DS0.h  itp_teleoperation.h
include/raven/: defines.h  r2_jacobian.h  reconfigure.h  rt_process_preempt.h
launch/: raven_BGU.launch
msg/: raven_automove.msg
msg_gen/lisp/: _package.lisp  _package_raven_automove.lisp  _package_raven_state.lisp  raven_automove.lisp  raven_state.lisp
params/: r2params.yaml
src/raven/: console_process.cpp  globals.cpp  hmatrix.c  homing.cpp  init.cpp  local_io.cpp  network_layer.cpp  pid_control.cpp  r2_kinematics.cpp  reconfigure.cpp  rt_process_preempt.cpp  rt_raven.cpp  tools.cpp
src/raven_BGU/cfg/: MyStuffConfig.py
src/raven_BGU/msg/: _raven_automove.py  _raven_state.py
src/raven_catkin/cfg/: MyStuffConfig.py
